--- a/todo.txt
+++ b/todo.txt
@@ -5,4 +5,4 @@ univers: docs univers et les publis picploc
 nos événements (TO): event
 qui sommes-nous?: équipe
 
-+afficher message si javascript désactivé
++timeline: popups
