--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
 accueil: présentation courte que c'est un gn belge (mots clés) + les prochains événements
 univers: docs univers et les publis picploc
 nos événements (TO): event
-qui sommes-nous?: équipe
+qui sommes-nous?: équipe, à mettre en html
